konst/tests/misc_tests/array_macros2_ui_tests/non_local_return_map_err.rs
#[allow(unreachable_code)]
const _: [usize; 1] = 'out: {
    konst::array::map!([10], |x| break 'out [x * 2])
};


fn main() {}